fix issue message overlapping continue button
happens when the text is wrapping into a new line

--- a/app/quiz/page.module.css
+++ b/app/quiz/page.module.css
@@ -122,6 +122,6 @@
 }
 
 .issue {
-    height: 1lh;
+    min-height: 1lh;
     color: var(--color-error);
 }
